--- a/package.json
+++ b/package.json
@@ -37,8 +37,13 @@
     "@nrwl/eslint-plugin-nx": "13.4.4",
     "@nrwl/jest": "13.4.4",
     "@nrwl/linter": "13.4.4",
+    "@nrwl/storybook": "^13.4.4",
     "@nrwl/tao": "13.4.4",
     "@nrwl/workspace": "13.4.4",
+    "@storybook/addon-essentials": "~6.4.5",
+    "@storybook/angular": "~6.4.5",
+    "@storybook/builder-webpack5": "~6.4.5",
+    "@storybook/manager-webpack5": "~6.4.5",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
